<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>orca_shared</name>
  <version>0.5.0</version>
  <description>Orca shared headers and code</description>

  <maintainer email="clyde@mcqueen.net">Clyde McQueen</maintainer>
  <license>MIT</license>

  <url type="repository">https://github.com/clydemcqueen/orca4.git</url>
  <url type="bugtracker">https://github.com/clydemcqueen/orca4/issues</url>

  <author>Clyde McQueen</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>

  <test_depend>ament_cmake_copyright</test_depend>
  <test_depend>ament_cmake_cpplint</test_depend>
  <test_depend>ament_cmake_flake8</test_depend>
  <test_depend>ament_cmake_lint_cmake</test_depend>
  <test_depend>ament_cmake_pep257</test_depend>
  <test_depend>ament_cmake_uncrustify</test_depend>
  <test_depend>ament_cmake_xmllint</test_depend>

  <!-- cppcheck throws false unknownMacro errors, disable -->
  <!--<test_depend>ament_cmake_cppcheck</test_depend>-->

  <depend>geometry_msgs</depend>
  <depend>image_geometry</depend>
  <depend>orca_msgs</depend>
  <depend>rclcpp</depend>
  <depend>ros2_shared</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>